Re-enable libhwacha.so build
A more explicit header path is needed in insn_template_hwacha.cc since
some instruction mnemonics collide with RVV (e.g., vsetvl).

--- a/hwacha/hwacha.mk.in
+++ b/hwacha/hwacha.mk.in
@@ -45,3 +45,7 @@ hwacha_junk = \
 	$(hwacha_ut_gen_srcs) \
 	insn_template_hwacha.h.gch \
 	insn_template_hwacha_ut.h.gch \
+
+hwacha_CFLAGS = -fPIC
+
+hwacha_install_shared_lib = yes
