fix systolic build issue, why is configure committed?

--- a/riscv-systolic.pc.in
+++ b/riscv-systolic.pc.in
@@ -4,7 +4,7 @@ libdir=${prefix}/@libdir@
 includedir=${prefix}/@includedir@
 
 Name: riscv-systolic
-Description: RISC-V Hwacha binary library
+Description: RISC-V Systolic library
 Version: git
 Libs: -Wl,-rpath,${libdir} -L${libdir} -lsystolic
 Cflags: -I${includedir}
