--- a/configure.ac
+++ b/configure.ac
@@ -96,7 +96,7 @@ AX_APPEND_LINK_FLAGS([-Wl,--export-dynamic])
 # The '*' suffix indicates an optional subproject. The '**' suffix
 # indicates an optional subproject which is also the name of a group.
 
-MCPPBS_SUBPROJECTS([ fesvr, riscv, hwacha, gemmini, disasm, customext, fdt, softfloat, spike_main, spike_dasm ])
+MCPPBS_SUBPROJECTS([ fesvr, riscv, hwacha, gemmini, sha3, disasm, customext, fdt, softfloat, spike_main, spike_dasm ])
 
 #-------------------------------------------------------------------------
 # MCPPBS subproject groups
@@ -119,4 +119,5 @@ AC_CONFIG_FILES([riscv-fesvr.pc])
 AC_CONFIG_FILES([riscv-hwacha.pc])
 AC_CONFIG_FILES([riscv-gemmini.pc])
 AC_CONFIG_FILES([riscv-disasm.pc])
+AC_CONFIG_FILES([riscv-sha3.pc])
 AC_OUTPUT
